# td4-py

./: LICENSE  README.md  main.py  pyproject.toml
td4/: __init__.py  cpu.py  emulate.py  opcode.py  output.py  parse.py
tests/: Knight2K.td4  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  ラーメンタイマー.td4
