[tool.poetry]
name = "td4"
version = "1.0.2"
description = "4bit CPU emulator"
authors = ["kota <52403688+yashikota@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "td4"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
td4 = "td4.emulate:emulator"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.254"
mypy = "^1.1.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/yashikota/td4-py"
documentaition = "https://github.com/yashikota/td4-py#readme"
repository = "https://github.com/yashikota/td4-py"

[tool.setuptools.packages.find]
exclude = ["dist", "tests"]
